*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.15 ===
* Added audio pre-mixing controls.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Added support of sidechain passed by shared memory link.
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated behaviour of split editing in UI.
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Implemented automatic scale of spectrum graph switch.
* Implemented split frequency display.
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Fixed bug for invalid processing of large buffer sizes.
* Reduced CPU consumption.
* Reduced the rate of the gain curve update.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Implemented Linear Phase mode.
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial release.
