@@ -4,6 +4,7 @@
 
 === 1.0.15 ===
 * Added audio pre-mixing controls.
+* Updated build scripts and dependencies.
 
 === 1.0.14 ===
 * Updated build scripts and dependencies.
